wrap component/asset items, fix container overflow

--- a/themes/aframe/source/css/home.styl
+++ b/themes/aframe/source/css/home.styl
@@ -78,8 +78,8 @@ ul
 
 .home__examples__scene-container
   display flex
-  flex 6
   flex-wrap wrap
+  width 100%
 
 .home__examples__scene
   background #333
@@ -136,6 +136,7 @@ a-scene
 .CodeMirror
   flex 2
   padding 15px
+  max-width 66%
 
 .home__examples__panel
   background #444
@@ -159,8 +160,12 @@ a-scene
     font-weight 300
     margin-bottom 5px
     text-decoration underline
+  ul
+    display flex
+    flex-wrap wrap
+    width 100%
   li
-    margin 2px 0
+    margin 2px 10px 2px 0
   a
     border 1px solid #FFF
     border-radius 2px
